fix: 차단 사용자 목록 조회 및 참가 상태 컬럼 추가
- getBlockedUsers 스트림 결과를 가변 리스트로 변경
- gathering_participants에 참가 상태(status) 컬럼 추가